--- a/index.html
+++ b/index.html
@@ -1,324 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Fast Typing</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Typing Speed Game</title>
 <style>
-  :root {
-    --bg:#ffffff; --text:#000; --accent:#0077ff;
-    --error:#ff4444; --correct:#1eb21e; --timer-bg:#f0f0f0;
-  }
-  body.dark {--bg:#1e1e1e;--text:#e0e0e0;--accent:#66aaff;
-             --error:#ff6666;--correct:#28d428;--timer-bg:#333;}
-  body{margin:0;font-family:sans-serif;background:var(--bg);color:var(--text);
-       padding:20px;transition:.25s;}
-  h1{text-align:center;margin-top:0;}
-  .controls{display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-bottom:15px;}
-  select,button{padding:8px 12px;font-size:15px;border:1px solid #aaa;border-radius:6px;background:var(--bg);color:var(--text);cursor:pointer;}
-  button:hover,select:hover{border-color:var(--accent);}
-  .dark-toggle{background:var(--accent);color:#fff;border:none;}
-  .timer{text-align:center;font-size:1.75rem;margin-bottom:14px;padding:10px;border-radius:8px;background:var(--timer-bg);}
-  .timer.red{background:var(--error);color:#fff;}
-  .text-display{max-width:820px;margin:0 auto;font-size:1.15rem;line-height:1.8;padding:16px;border:1px solid #ccc;border-radius:8px;background:var(--bg);min-height:90px;user-select:none;white-space:pre-wrap;}
-  .correct{color:var(--correct);}
-  .wrong{color:var(--error);}
-  .active{text-decoration:underline;}
-  .stats{text-align:center;margin-top:14px;font-size:1rem;}
-  .hidden{display:none;}
-  .progress-page{text-align:center;margin-top:20px;}
-  .small{font-size:0.9rem;color:gray;}
-
-  /* --- MOBILE INPUT FIX --- */
-  #hiddenInput{
-    opacity:0;
-    position:absolute;
-    left:-9999px;
-  }
+    :root {
+        --bg: #f4f4f4;
+        --text: #222;
+        --accent: #0077ff;
+        --error: #ff3b3b;
+        --box: #fff;
+    }
+    body.dark {
+        --bg: #1e1e1e;
+        --text: #e0e0e0;
+        --box: #2a2a2a;
+    }
+    body {
+        margin: 0; padding: 0;
+        background: var(--bg);
+        color: var(--text);
+        font-family: Arial, sans-serif;
+        display: flex; flex-direction: column;
+        align-items: center; justify-content: center;
+        height: 100vh;
+        transition: background .3s, color .3s;
+    }
+    h1 { margin-top: 0; }
+    .controls, .info { margin: 10px 0; }
+    select, button, input {
+        padding: 5px 10px;
+        margin: 0 5px;
+    }
+    #quoteBox {
+        width: 80%;
+        max-width: 600px;
+        padding: 20px;
+        margin-top: 20px;
+        background: var(--box);
+        border-radius: 8px;
+        font-size: 1.4rem;
+        min-height: 80px;
+        text-align: center;
+    }
+    .char.correct { color: green; }
+    .char.incorrect { color: var(--error); }
+    #timer {
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    .low-time { color: var(--error); }
+    #resultBox { margin-top: 20px; font-size: 1.2rem; }
+    #darkModeToggle {
+        position: absolute; top: 15px; right: 15px;
+    }
+    /* hidden input for phone typing */
+    #mobileInput {
+        opacity: 0;
+        position: absolute;
+        pointer-events: none;
+    }
 </style>
 </head>
 <body>
-
-<h1>Typing Area</h1>
+<h1>Typing Speed Game</h1>
 
 <div class="controls">
-  <label>Theme:
-    <select id="themeSelect">
-      <option value="Sea">🌊 Sea</option>
-      <option value="House">🏠 In the House</option>
-      <option value="Supermarket">🏪 Supermarket</option>
-      <option value="School">🏫 School</option>
-    </select>
-  </label>
-
-  <label>Mode:
-    <select id="modeSelect">
-      <option value="easy">Easy</option>
-      <option value="medium">Medium</option>
-      <option value="hard">Hard</option>
-    </select>
-  </label>
-
-  <label>Time (sec):
-    <select id="timeSelect">
-      <option>15</option><option>20</option><option>25</option>
-      <option>30</option><option>35</option><option>40</option>
-      <option>45</option><option>50</option>
-    </select>
-  </label>
-
-  <button id="darkModeToggle" class="dark-toggle">Toggle Dark/Light</button>
-  <button id="resetBtn">Reset</button>
+    <label>Theme:
+        <select id="themeSelect">
+            <option value="sea">Sea</option>
+            <option value="house">In the House</option>
+            <option value="supermarket">Supermarket</option>
+            <option value="school">School</option>
+        </select>
+    </label>
+    <label>Difficulty:
+        <select id="difficultySelect">
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
+        </select>
+    </label>
+    <label>Time:
+        <input type="number" id="timeSelect" value="30" min="15" max="50">
+    </label>
+    <button id="startBtn">Start</button>
+    <button id="darkModeToggle">Dark/Light</button>
 </div>
 
-<!-- GAME -->
-<div id="gameSection">
-  <div class="timer" id="timer">Time: 0s</div>
-  <div class="text-display" id="textDisplay"></div>
-  <div class="stats">
-    <p>WPM: <span id="wpm">0</span> | Accuracy: <span id="accuracy">100</span>% | Errors: <span id="errors">0</span></p>
-    <p class="small">Tip: press regular keys to type. Backspace is disabled for corrections on wrong chars.</p>
-  </div>
+<div class="info">
+    <span id="timer">Timer: 0s</span> |
+    <span id="wpm">WPM: 0</span>
 </div>
 
-<!-- PROGRESS -->
-<div id="progressSection" class="hidden">
-  <div class="progress-page">
-    <h2 id="resultText"></h2>
-    <p>WPM: <strong id="resWpm"></strong></p>
-    <p>Accuracy: <strong id="resAcc"></strong>%</p>
-    <p>Errors: <strong id="resErr"></strong></p>
-    <p class="small">Choose a theme from top (Theme dropdown) before playing again.</p>
-    <div style="margin-top:18px;">
-      <button id="playAgainBtn">Play Again</button>
-    </div>
-  </div>
-</div>
+<div id="quoteBox">Press Start to begin...</div>
+<div id="resultBox"></div>
 
-<!-- --- MOBILE INPUT FIX --- -->
-<input id="hiddenInput" type="text" autocomplete="off" autocorrect="off" autocapitalize="none" />
-
-<audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
+<!-- hidden input for mobile typing -->
+<input id="mobileInput" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 
 <script>
-// ---------- text banks ----------
-const themeTexts = {
-  Sea: [
-    "Waves crash gently on the sandy shore while small crabs run quickly.",
-    "A fishing boat sails across the calm blue sea under a warm sunset.",
-    "Dolphins jump gracefully above the shining ocean water.",
-    "The lighthouse guides ships safely during the stormy night.",
-    "Colorful corals grow under the shallow warm water near the island."
+const startBtn = document.getElementById('startBtn');
+const darkToggle = document.getElementById('darkModeToggle');
+const quoteBox = document.getElementById('quoteBox');
+const timerEl = document.getElementById('timer');
+const wpmEl = document.getElementById('wpm');
+const resultBox = document.getElementById('resultBox');
+const themeSelect = document.getElementById('themeSelect');
+const diffSelect = document.getElementById('difficultySelect');
+const timeSelect = document.getElementById('timeSelect');
+const mobileInput = document.getElementById('mobileInput');
+
+darkToggle.addEventListener('click', ()=> document.body.classList.toggle('dark'));
+
+const quotes = {
+  sea: [
+    "Waves crash gently on the shore.",
+    "A lighthouse shines over the ocean.",
+    "Fishermen cast their nets at dawn.",
+    "The coral reef hides many secrets.",
+    "A seagull soars above the blue sea."
   ],
-  House: [
-    "The kitchen smells like fresh bread coming out of the warm oven.",
-    "A bright lamp glows softly beside the cozy wooden chair in the corner.",
-    "Children are laughing and playing with their toys in the living room.",
-    "A black cat sleeps on the soft sofa while the TV plays quietly.",
-    "The bathroom mirror fogs up after a long hot shower."
+  house: [
+    "The cat sleeps on the warm sofa.",
+    "A clock ticks quietly in the hall.",
+    "The kettle whistles on the stove.",
+    "Books are stacked neatly on the shelf.",
+    "A breeze enters through the open window."
   ],
-  Supermarket: [
-    "The supermarket shelves are packed with colorful boxes and fresh bread.",
-    "A worker arranges fruits neatly while customers push their shopping carts.",
-    "The frozen section keeps ice cream and frozen vegetables cold all day.",
-    "A little boy asks his mom to buy a chocolate bar near the counter.",
-    "The cashier scans the groceries quickly and prints the receipt."
+  supermarket: [
+    "Apples are fresh in the basket.",
+    "A cashier scans the items fast.",
+    "Customers wait patiently in line.",
+    "The bread smells warm and sweet.",
+    "Frozen vegetables fill the freezer section."
   ],
-  School: [
-    "Students quietly solve math problems in their bright classroom.",
-    "The teacher writes notes on the board while the class listens carefully.",
-    "The library is peaceful with students reading books and taking notes.",
-    "The school bell rings loudly signaling the start of recess.",
-    "Friends share snacks together under the big tree near the playground."
+  school: [
+    "Students hurry to their classrooms.",
+    "The teacher writes on the blackboard.",
+    "Laughter echoes in the school hallway.",
+    "Notebooks are scattered on the desk.",
+    "The bell rings to signal recess."
   ]
 };
 
-// ---------- DOM ----------
-const textDisplay = document.getElementById('textDisplay');
-const timerEl = document.getElementById('timer');
-const wpmEl = document.getElementById('wpm');
-const accEl = document.getElementById('accuracy');
-const errEl = document.getElementById('errors');
-const themeSelect = document.getElementById('themeSelect');
-const modeSelect = document.getElementById('modeSelect');
-const timeSelect = document.getElementById('timeSelect');
-const darkToggle = document.getElementById('darkModeToggle');
-const resetBtn = document.getElementById('resetBtn');
-const beep = document.getElementById('beep');
-
-const gameSection = document.getElementById('gameSection');
-const progressSection = document.getElementById('progressSection');
-const resultText = document.getElementById('resultText');
-const resWpm = document.getElementById('resWpm');
-const resAcc = document.getElementById('resAcc');
-const resErr = document.getElementById('resErr');
-const playAgainBtn = document.getElementById('playAgainBtn');
-
-// --- MOBILE INPUT FIX ---
-const hiddenInput = document.getElementById('hiddenInput');
-
-// ---------- state ----------
-let lesson = "";
+let currentText = "";
+let index = 0;
 let timer = 0;
-let initialTime = 0;
 let interval = null;
 let started = false;
-let gameOver = false;
-let progressShown = false;
-let charIndex = 0;
-let errors = 0;
-let typedChars = 0;
-let charStatus = []; // 'correct' | 'wrong' | undefined
+let correctChars = 0;
 
-// ---------- helpers ----------
-function pickRandomFromTheme(theme){
-  const list = themeTexts[theme] || [];
-  if(list.length === 0) return "";
-  return list[Math.floor(Math.random() * list.length)];
+function pickRandomQuote(theme) {
+  const arr = quotes[theme];
+  return arr[Math.floor(Math.random()*arr.length)];
 }
 
-function renderText(){
-  textDisplay.innerHTML = "";
-  if(charStatus.length < lesson.length){
-    for(let i = charStatus.length; i < lesson.length; i++) charStatus[i] = undefined;
-  }
-  lesson.split('').forEach((ch,i) => {
+function displayQuote(text) {
+  quoteBox.innerHTML = "";
+  for (let ch of text) {
     const span = document.createElement('span');
     span.textContent = ch;
-    if(charStatus[i] === 'correct') span.classList.add('correct');
-    if(charStatus[i] === 'wrong') span.classList.add('wrong');
-    if(i === charIndex) span.classList.add('active');
-    textDisplay.appendChild(span);
-  });
-}
-
-function resetGame(){
-  clearInterval(interval);
-  interval = null;
-  started = false;
-  gameOver = false;
-  progressShown = false;
-  charIndex = 0;
-  errors = 0;
-  typedChars = 0;
-  charStatus = [];
-
-  initialTime = parseInt(timeSelect.value) || 30;
-  timer = initialTime;
-  timerEl.textContent = `Time: ${timer}s`;
-  timerEl.classList.remove('red');
-
-  lesson = pickRandomFromTheme(themeSelect.value);
-  if(!lesson) lesson = "Type the chosen theme sentence.";
-  renderText();
-
-  wpmEl.textContent = '0';
-  accEl.textContent = '100';
-  errEl.textContent = '0';
-
-  gameSection.classList.remove('hidden');
-  progressSection.classList.add('hidden');
-
-  document.removeEventListener('keydown', keyHandler);
-  document.addEventListener('keydown', keyHandler);
-
-  // --- MOBILE INPUT FIX ---
-  hiddenInput.value = "";
-  hiddenInput.focus();
-
-  window.scrollTo({top:0, behavior:'smooth'});
-}
-
-function startTimer(){
-  if(started || gameOver) return;
-  started = true;
-  if(timer <= 0){handleTimeUp();return;}
-  interval = setInterval(()=>{
-    timer--;
-    if(timer < 0) timer = 0;
-    timerEl.textContent = `Time: ${timer}s`;
-    if(timer <= 10) timerEl.classList.add('red'); else timerEl.classList.remove('red');
-    if(timer <= 0){clearInterval(interval);handleTimeUp();}
-  },1000);
-}
-
-function handleTimeUp(){
-  if(gameOver || progressShown) return;
-  gameOver = true;
-  progressShown = true;
-  document.removeEventListener('keydown', keyHandler);
-  showProgress(false);
-}
-
-function keyHandler(e){
-  if(gameOver) return;
-  startTimer();
-
-  const key = e.key;
-  if(key === 'Backspace'){e.preventDefault();return;}
-
-  if(key.length === 1){
-    if(charIndex >= lesson.length) return;
-    const currentChar = lesson[charIndex];
-    if(key === currentChar){charStatus[charIndex] = 'correct';}
-    else {charStatus[charIndex] = 'wrong';errors++;try{beep.currentTime=0;beep.play();}catch(e){}}
-    charIndex++;
-    typedChars++;
-    updateStats();
-    renderText();
-    if(charIndex >= lesson.length){
-      if(!gameOver && !progressShown){
-        clearInterval(interval);
-        gameOver = true;progressShown = true;
-        document.removeEventListener('keydown', keyHandler);
-        showProgress(true);
-      }
-    }
+    span.classList.add('char');
+    quoteBox.appendChild(span);
   }
 }
 
-function updateStats(){
-  const timeSpent = initialTime - timer;
-  const minutes = (timeSpent>0)?(timeSpent/60):0;
-  const wpm = minutes>0?Math.round((typedChars/5)/minutes):0;
-  const acc = typedChars>0?Math.max(0,Math.round(((typedChars-errors)/typedChars)*100)):100;
-  wpmEl.textContent = wpm;
-  accEl.textContent = acc;
-  errEl.textContent = errors;
+function startGame() {
+  clearInterval(interval);
+  started = false;
+  index = 0;
+  correctChars = 0;
+  timer = parseInt(timeSelect.value);
+  timerEl.textContent = `Timer: ${timer}s`;
+  timerEl.classList.remove('low-time');
+  resultBox.textContent = "";
+  currentText = pickRandomQuote(themeSelect.value);
+  displayQuote(currentText);
+  wpmEl.textContent = "WPM: 0";
+  mobileInput.focus(); // focus for phone keyboard
 }
 
-function showProgress(win){
-  progressShown = true;
-  gameOver = true;
-  gameSection.classList.add('hidden');
-  progressSection.classList.remove('hidden');
-  resultText.textContent = win ? "🎉 You Win!" : "⏳ Time's Up!";
-  resWpm.textContent = wpmEl.textContent;
-  resAcc.textContent = accEl.textContent;
-  resErr.textContent = errEl.textContent;
+function startTimer() {
+  if (!started) {
+    started = true;
+    interval = setInterval(()=>{
+      timer--;
+      timerEl.textContent = `Timer: ${timer}s`;
+      if (timer <= 5) timerEl.classList.add('low-time');
+      if (timer <= 0) endGame(false);
+    },1000);
+  }
 }
 
-// --- MOBILE INPUT FIX ---
-document.body.addEventListener('click',()=>hiddenInput.focus());
-hiddenInput.addEventListener('input',(e)=>{
-  if(gameOver) return;
+function endGame(win) {
+  clearInterval(interval);
+  started = false;
+  const wpm = Math.round(correctChars/5/((parseInt(timeSelect.value)-timer+1)/60));
+  wpmEl.textContent = `WPM: ${wpm}`;
+  resultBox.textContent = win ? "You Win! 🎉" : "Time's Up! ⏳";
+}
+
+function handleInput(key) {
+  startTimer();
+  if (index >= currentText.length || timer <= 0) return;
+  const spans = quoteBox.querySelectorAll('span');
+  if (key === currentText[index]) {
+    spans[index].classList.add('correct');
+    index++;
+    correctChars++;
+    if (index === currentText.length) {
+      endGame(true);
+    }
+  } else {
+    spans[index].classList.add('incorrect');
+    index++; // tak boleh delete, terus move
+  }
+}
+
+// keyboard
+document.addEventListener('keydown', e => {
+  if (!started && /^[a-zA-Z0-9 ,.'!?]$/.test(e.key)) startTimer();
+  if (e.key.length === 1) handleInput(e.key);
+});
+
+// phone hidden input
+mobileInput.addEventListener('input', e=>{
   const val = e.target.value;
-  if(val){
-    const ch = val.slice(-1);
-    keyHandler({key:ch});
-    e.target.value="";
+  if (val.length > 0) {
+    const lastChar = val.slice(-1);
+    handleInput(lastChar);
+    e.target.value = '';
   }
 });
 
-// UI
-darkToggle.addEventListener('click',()=>document.body.classList.toggle('dark'));
-resetBtn.addEventListener('click',resetGame);
-playAgainBtn.addEventListener('click',resetGame);
-themeSelect.addEventListener('change',resetGame);
-modeSelect.addEventListener('change',resetGame);
-timeSelect.addEventListener('change',resetGame);
-
-resetGame();
+startBtn.addEventListener('click', startGame);
 </script>
 </body>
 </html>
